{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 40,
  "lineage": "81251526-8140-dbdf-02c8-236836a071e5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809886346527:subnet/subnet-0fcf2764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-0fcf2764",
            "map_public_ip_on_launch": true,
            "owner_id": "809886346527",
            "state": "available",
            "vpc_id": "vpc-6dc60606"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809886346527:subnet/subnet-9febcde5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-9febcde5",
            "map_public_ip_on_launch": true,
            "owner_id": "809886346527",
            "state": "available",
            "vpc_id": "vpc-6dc60606"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809886346527:subnet/subnet-7239b73e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-7239b73e",
            "map_public_ip_on_launch": true,
            "owner_id": "809886346527",
            "state": "available",
            "vpc_id": "vpc-6dc60606"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809886346527:vpc/vpc-6dc60606",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-6d9c3306",
            "default_route_table_id": "rtb-7400891f",
            "default_security_group_id": "sg-d84181bf",
            "dhcp_options_id": "dopt-cc25ffa7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-6dc60606",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-7400891f",
            "owner_id": "809886346527"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0367b500fdcac0edc",
            "arn": "arn:aws:ec2:us-east-2:809886346527:instance/i-02d55b90947e9c4f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "test-rest-api-host",
            "id": "i-02d55b90947e9c4f7",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "test-rest-api-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-00ae07f0e4cd57781",
            "private_dns": "ip-172-31-11-240.us-east-2.compute.internal",
            "private_ip": "172.31.11.240",
            "public_dns": "ec2-13-59-235-10.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.235.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0e76716b0be4b3207",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "test-rest-api-common",
              "test-rest-api-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcf2764",
            "tags": {
              "Name": "test-rest-api-control_plane-1",
              "kubernetes.io/cluster/test-rest-api": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bdaee7060ef802a",
              "sg-0c4f143d5d5a1773a"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0367b500fdcac0edc",
            "arn": "arn:aws:ec2:us-east-2:809886346527:instance/i-04b586544c29e1993",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "test-rest-api-host",
            "id": "i-04b586544c29e1993",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "test-rest-api-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb9bb7858ccd25bb",
            "private_dns": "ip-172-31-22-38.us-east-2.compute.internal",
            "private_ip": "172.31.22.38",
            "public_dns": "ec2-3-14-152-149.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.152.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-02b0928cc92bdd2c6",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "test-rest-api-common",
              "test-rest-api-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9febcde5",
            "tags": {
              "Name": "test-rest-api-control_plane-2",
              "kubernetes.io/cluster/test-rest-api": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bdaee7060ef802a",
              "sg-0c4f143d5d5a1773a"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0367b500fdcac0edc",
            "arn": "arn:aws:ec2:us-east-2:809886346527:instance/i-0754233b7bc4ea209",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "test-rest-api-host",
            "id": "i-0754233b7bc4ea209",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "test-rest-api-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-07b71881a210db380",
            "private_dns": "ip-172-31-40-142.us-east-2.compute.internal",
            "private_ip": "172.31.40.142",
            "public_dns": "ec2-3-19-73-208.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.73.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0c462ec2a119b2b21",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "test-rest-api-common",
              "test-rest-api-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7239b73e",
            "tags": {
              "Name": "test-rest-api-control_plane-3",
              "kubernetes.io/cluster/test-rest-api": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02bdaee7060ef802a",
              "sg-0c4f143d5d5a1773a"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:809886346527:loadbalancer/net/test-rest-api-api-lb/6ca86cc1b28cb2a6",
            "arn_suffix": "net/test-rest-api-api-lb/6ca86cc1b28cb2a6",
            "dns_name": "test-rest-api-api-lb-6ca86cc1b28cb2a6.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:809886346527:loadbalancer/net/test-rest-api-api-lb/6ca86cc1b28cb2a6",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "test-rest-api-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0fcf2764"
              },
              {
                "subnet_id": "subnet-7239b73e"
              },
              {
                "subnet_id": "subnet-9febcde5"
              }
            ],
            "subnets": [
              "subnet-0fcf2764",
              "subnet-7239b73e",
              "subnet-9febcde5"
            ],
            "tags": {
              "Cluster": "test-rest-api",
              "kubernetes.io/cluster/test-rest-api": "shared"
            },
            "vpc_id": "vpc-6dc60606",
            "zone_id": "ZLMOA37VPKANP"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:809886346527:listener/net/test-rest-api-api-lb/6ca86cc1b28cb2a6/e7ffa5c756e11748",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:809886346527:targetgroup/test-rest-api-api/a6d92e65cd795dff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:809886346527:listener/net/test-rest-api-api-lb/6ca86cc1b28cb2a6/e7ffa5c756e11748",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:809886346527:loadbalancer/net/test-rest-api-api-lb/6ca86cc1b28cb2a6",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:809886346527:targetgroup/test-rest-api-api/a6d92e65cd795dff",
            "arn_suffix": "targetgroup/test-rest-api-api/a6d92e65cd795dff",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:809886346527:targetgroup/test-rest-api-api/a6d92e65cd795dff",
            "lambda_multi_value_headers_enabled": false,
            "name": "test-rest-api-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-6dc60606"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:809886346527:targetgroup/test-rest-api-api/a6d92e65cd795dff-20200212145138816700000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:809886346527:targetgroup/test-rest-api-api/a6d92e65cd795dff",
            "target_id": "i-02d55b90947e9c4f7"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:809886346527:targetgroup/test-rest-api-api/a6d92e65cd795dff-20200212145138869500000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:809886346527:targetgroup/test-rest-api-api/a6d92e65cd795dff",
            "target_id": "i-04b586544c29e1993"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:809886346527:targetgroup/test-rest-api-api/a6d92e65cd795dff-20200212145138843500000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:809886346527:targetgroup/test-rest-api-api/a6d92e65cd795dff",
            "target_id": "i-0754233b7bc4ea209"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_iam_instance_profile.profile",
            "aws_iam_role.role",
            "aws_instance.control_plane",
            "aws_key_pair.deployer",
            "aws_lb_target_group.control_plane_api",
            "aws_security_group.common",
            "aws_security_group.control_plane"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809886346527:security-group/sg-02bdaee7060ef802a",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bdaee7060ef802a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "test-rest-api-common",
            "name_prefix": null,
            "owner_id": "809886346527",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/test-rest-api": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-6dc60606"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:809886346527:security-group/sg-0c4f143d5d5a1773a",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-0c4f143d5d5a1773a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "test-rest-api-control_planes",
            "name_prefix": null,
            "owner_id": "809886346527",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/test-rest-api": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-6dc60606"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}